# odup

./: .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/instructions/: odup.instructions.md
.github/workflows/: python-test.yml
src/odup/: __init__.py  cli.py  database.py  env_manager.py  environment.py  error.py  git.py  git_manager.py  odoo_utils.py  utils.py  versioning.py  workflows.py
tests/: test_cli.py  test_env_manager.py  test_environment.py  test_odoo_utils.py  test_versioning.py  test_workflows.py
