[project]
name = "odup"
version = "1.7.0"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Cyril Moreau (cymo)", email = "cymo@odoo.com" }
]
description = "CLI helpers for experimenting with Odoo upgrades locally."
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
dependencies = [
	"typer>=0.12,<1",
	"psycopg2>=2.9,<3",
]

[project.scripts]
odup = "odup.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src/odup"]

[tool.uv]
managed = true


[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.7",
]

[tool.ruff]
src = ["odup", "tests"]

[tool.ruff.lint]
# allow unused imports in __init__.py files
per-file-ignores = { "__init__.py" = ["F401"] }
